--- a/index1.html
+++ b/index1.html
@@ -29,8 +29,8 @@ button {
 /* Layout principal */
 #studyDiv {
   position: fixed;
-  height: 100vh;
-  width: 50%;
+  height: 25vh;
+  width: 100%;
   background: #fefff3;
   top: 0;
   left: 0;
@@ -51,10 +51,10 @@ button {
 
 /* Contenedor principal de secciones */
 #sectionsContainer {
-  width: calc(62% - 44px);
+  width: calc(100% - 44px);
   max-width: 960px;
-  height: 100vh;
-  margin-left: 50%;
+  height: 75vh;
+  margin-top: 25vh;
   overflow: auto;
 }
 
@@ -68,7 +68,7 @@ button {
   background: #fefff3;
   border-radius: 12px;
   box-shadow: 0 5px 19px 1px rgba(0, 0, 0, .28);
-  display: none;
+  display: flex;
   z-index: 101;
   justify-content: center;
   flex-wrap: wrap;
@@ -149,7 +149,6 @@ button {
 
 .level-card h3 {
   margin: 0px;
-  font-size: 14px;
 }
 
 /* Flecha más simple */
@@ -221,7 +220,6 @@ button {
   padding: 8px 2px;
   color: #2c3e50;
   font-weight: bold;
-  font-size: 20px;
 }
 </style>
 </head>
