--- a/index.html
+++ b/index.html
@@ -307,22 +307,10 @@ function initSectionsOnly() {
   });
 }
 
-function filterSections(cat, btn) {
-  if (selected) { selected.classList.remove("selected"); selected=null; studyDiv.innerHTML=""; }
-  currentCategory=cat;
-  container.querySelectorAll(".category-block").forEach(b=>b.style.display=b.dataset.category===cat?"block":"none");
-  document.querySelectorAll(".categoryButton").forEach(b=>{
-    const active = b===btn;
-    b.style.border = active?"4px solid #620808":"1px solid gray";
-    b.style.borderRadius = active?"8px":"69px";
-    b.style.outline = active?"3px solid rgba(98,8,8,0.25)":"none";
-  });
-}
-
 function handleCardClick(card){
   const deselect = selected===card;
   if(selected) selected.classList.remove("selected");
-  if(deselect){ selected=null; studyDiv.innerHTML=""; return; }
+  if(deselect){ selected=null; studyDiv.innerHTML=""; showGanbatte(); return;}
   card.classList.add("selected"); selected=card;
 
   const lvl = ALL_LISTS.find(l=>l.listName===card.dataset.listName||l.name===card.dataset.listName)
@@ -354,6 +342,12 @@ function renderStudyDiv(level){
   });
   table.appendChild(tbody); studyDiv.appendChild(table);
 }
+
+//CREAR URL DE PRACTICA
+document.querySelector("#actionDiv > :first-child").onclick = () => {
+  if (!selected) return;
+  location.href = `practiceGround.html?play=${encodeURIComponent(selected.dataset.listName)}&level=${encodeURIComponent(selected.dataset.index)}`;
+};
 
 function showGanbatte(){ if(!studyDiv.innerHTML.trim()) studyDiv.innerHTML="<h1 class='title'>がんばって</h1><h3 style='font-weight:bold;padding-left:10px;margin-top:0px'>Ánimo</h3>"; }
 
