--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@ button {
 }
 
 #sectionsContainer {
-  position: relative;
+  position: fixed;
   width: calc(62% - 50px);
-  max-width: 960px;
   height: 100vh;
-  margin-left: 50%;
+  right: 0;
   overflow: auto;
   padding-top: 30vh;
 }
