--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ button {
   left: 0;
   height: 75vh;
   width: 50%;
-  z-index: 100;
+  z-index: 1;
   overflow: auto;
   display: flex;
   flex-direction: column;
@@ -69,8 +69,9 @@ button {
 
 #sectionsContainer {
   position: fixed;
-  width: calc(62% - 50px);
-  height: 100vh;
+  width: 50%;
+  top: 0;
+  bottom: 0;
   right: 0;
   overflow: auto;
   padding-top: 30vh;
@@ -221,6 +222,7 @@ button {
   flex-wrap: wrap;
   align-content: center;
   flex-direction: column;
+  z-index: 10;
 }
 
 #actionDiv > * {
