idk how to fix scroooooll

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ button, [role="button"]{ touch-action: manipulation; cursor: pointer; border: no
 
 /* Layout principal */
 #studyDiv {
-  position: fixed; top:0; left:0; height:65vh; width:50%; z-index:1;
-  display:flex; flex-direction:column; align-items:flex-start; padding:8px;
+  position: fixed; top:0; left:0; height:75vh; width:50%; z-index:1;
+  display:flex; flex-direction:column; align-items:flex-start;
 }
 #studyDiv .title{ font-size:1.2rem; margin:0 0 8px 10px; font-weight:600 }
 
@@ -92,8 +92,7 @@ button, [role="button"]{ touch-action: manipulation; cursor: pointer; border: no
 
 /* Acción inferior */
 #actionDiv{
-  position:fixed; padding-top:8px; bottom:0; left:0; width:50%; height:calc(25vh - 8px); display:flex; gap:8px; flex-wrap:wrap;
-  align-content:center; flex-direction:column; z-index:10;
+  position:fixed; bottom:0; left:0; width:50%; height:25vh; display:flex; gap:8px; flex-wrap:wrap; align-content:center; flex-direction:column; z-index:10;
 }
 #actionDiv > *{ margin:0; width:90%; font-size:15px; font-weight:500; letter-spacing:.3px; background:rgba(255,255,255,0.10); border-radius:6px; padding:5px; text-align:center }
 
