who is the error maker?

--- a/index.html
+++ b/index.html
@@ -104,7 +104,15 @@ button, [role="button"]{ touch-action: manipulation; cursor: pointer; border: no
   position: fixed;
   top: 0;
   left: 0;
+}
 
+#box2 {
+  height: 25vh;
+  width: 70%;
+  background: green;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 </style>
@@ -112,6 +120,7 @@ button, [role="button"]{ touch-action: manipulation; cursor: pointer; border: no
 </head>
 <body>
   <div id="box">
+    <div id="box2">
   <div id="studyDiv" aria-live="polite"></div>
 
   <div id="actionDiv" role="toolbar" aria-label="Acciones">
