--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ button, [role="button"]{ touch-action: manipulation; cursor: pointer; border: no
 
 /* Layout principal */
 #studyDiv {
-  position: fixed; top:0; left:0; height:75vh; width:50%; z-index:1;
+  position: fixed; top:0; left:0; height:75%; width:50%; z-index:1;
   display:flex; flex-direction:column; align-items:flex-start; padding:8px;
   background: red;
 }
@@ -107,7 +107,7 @@ button, [role="button"]{ touch-action: manipulation; cursor: pointer; border: no
 }
 
 #box2 {
-  height: 25vh;
+  height: 25%;
   width: 70%;
   background: green;
   position: fixed;
