--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@ button, [role="button"]{ touch-action: manipulation; cursor: pointer; border: no
 
 /* Acción inferior */
 #actionDiv{
-  position:fixed; bottom:0; left:0; width:50%; height:25vh; display:flex; gap:8px; flex-wrap:wrap; align-content:center; flex-direction:column; z-index:10;
+  position:fixed; bottom:0; left:0; width:50%; height:25%; display:flex; gap:8px; flex-wrap:wrap; align-content:center; flex-direction:column; z-index:10;
 }
 #actionDiv > *{ margin:0; width:90%; font-size:15px; font-weight:500; letter-spacing:.3px; background:rgba(255,255,255,0.10); border-radius:6px; padding:5px; text-align:center }
 
 #box {
-  height: 75vh;
+  height: 75%;
   width: 100%;
   background: blue;
   position: fixed;
