--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@ button, [role="button"]{ touch-action: manipulation; cursor: pointer; border: no
 
 /* Layout principal */
 #studyDiv {
-  position: fixed; top:0; left:0; height:75%; width:50%; z-index:1;
+  position: fixed; top:0; left:0; height:calc(75% - 20px); width:50%; z-index:1;
   display:flex; flex-direction:column; align-items:flex-start; padding:8px;
-  background: red;
 }
 #studyDiv .title{ font-size:1.2rem; margin:0 0 8px 10px; font-weight:600 }
 
@@ -93,34 +92,14 @@ button, [role="button"]{ touch-action: manipulation; cursor: pointer; border: no
 
 /* Acción inferior */
 #actionDiv{
-  position:fixed; bottom:0; left:0; width:50%; height:25%; display:flex; gap:8px; flex-wrap:wrap; align-content:center; flex-direction:column; z-index:10;
+  position:fixed; bottom:0; left:0; width:50%; height:25%; display:flex; gap:8px; flex-wrap:wrap; align-content:center; flex-direction:column; z-index:10; paddomg
 }
 #actionDiv > *{ margin:0; width:90%; font-size:15px; font-weight:500; letter-spacing:.3px; background:rgba(255,255,255,0.10); border-radius:6px; padding:5px; text-align:center }
-
-#box {
-  height: 75%;
-  width: 100%;
-  background: blue;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
-#box2 {
-  height: 25%;
-  width: 70%;
-  background: green;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-}
 
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="box">
-    <div id="box2">
   <div id="studyDiv" aria-live="polite"></div>
 
   <div id="actionDiv" role="toolbar" aria-label="Acciones">
